Order mikroservisi tamamlandı

--- a/Services/Order/FreeCourse.Services.Order.API/appsettings.json
+++ b/Services/Order/FreeCourse.Services.Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1444;Database=OrderDb; User=sa; Password=94ugurOkan.; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
