--- a/Services/Order/FreeCourse.Services.Order.Application/FreeCourse.Services.Order.Application.csproj
+++ b/Services/Order/FreeCourse.Services.Order.Application/FreeCourse.Services.Order.Application.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
