Gatewat oceletto tamamlandı

--- a/IdentityServer/FreeCourse.IdentityServer/appsettings.json
+++ b/IdentityServer/FreeCourse.IdentityServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Database=IdentityDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=localhost,1435;Database=identityDb;User=sa; Password=94ugurOkan.; TrustServerCertificate=true"
   }
 }
