--- a/Services/Order/FreeCourse.Services.Order.API/appsettings.json
+++ b/Services/Order/FreeCourse.Services.Order.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1444;Database=OrderDb; User=sa; Password=94ugurOkan.; TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost,1434;Database=orderDb; User=sa; Password=94ugurOkan.; TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
